add javax.json impl dependency

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
           <artifactId>jersey-media-json-jackson</artifactId>
           <version>2.26-b03</version>
       </dependency>
+      <dependency>
+          <groupId>org.glassfish</groupId>
+          <artifactId>javax.json</artifactId>
+          <version>1.0.4</version>
+      </dependency>
 
   </dependencies>
 
