--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -1,5 +1,6 @@
+.level=FINER
 java.util.logging.FileHandler.pattern=game.log
 java.util.logging.FileHandler.append=true
-java.util.logging.FileHandler.level=ALL
+java.util.logging.FileHandler.level=FINEST
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.SimpleFormatter.format=%4$s: %5$s [%1$tc]%n
